--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "https://social-networking.herokuapp.com",
+  "proxy": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,18 +11,23 @@
     "emoji-picker-react": "^3.4.8",
     "formik": "^2.2.9",
     "node-sass": "^6.0.1",
+    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-lazyload": "^3.2.0",
+    "react-loading-skeleton": "^3.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-textarea-autosize": "^8.3.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "request": "^2.88.2",
+    "socket.io-client": "^4.4.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
